// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component should render primary variant 1`] = `
<div>
  <span
    class="badge"
    style="background-color: rgb(75, 107, 251); color: rgb(255, 255, 255);"
  >
    Test Badge
  </span>
</div>
`;

exports[`Badge component should render secondary variant 1`] = `
<div>
  <span
    class="badge"
    style="background-color: rgba(75, 107, 251, 0.05); color: rgb(75, 107, 251);"
  >
    Test Badge
  </span>
</div>
`;
